# OsimPipeline

./: DO.asv  DO.m  ID.asv  ID.m  IK.asv  IK.m  IMU_IK.m  IMU_Placer.m  IMU_Placer_GdR.m  JRF.m  KS.m  LinScaling.m  MVNXtoSTO.asv  MVNXtoSTO.m  Patients Display.mlappinstall  README.md  Run_All.asv  Run_All.m  Run_Select.m  SO.asv  SO.m  Summarize.m  TimeNormalizeTRCMOT.m  params.json  reportfig.mat
GenericSetup/: ExternalLoads.xml  Generic.osim  ID_Generic.xml  IK_Generic.xml  IMU_Placer_Generic.xml  JRA_Generic.xml  MA_Generic.xml  Reserve_actuators.xml  SO_Generic.xml  Scaling_Generic.xml
MuscleRedundancySolver-master/Examples/Example_EMGWalking/: EMGconstrained.m
MuscleRedundancySolver-master/MuscleModel/ReadFromModel/: getMuscleInfo.m
SubFunctions/: CreateActuatorsFile.m  DecomposeCF.m  OSIM_Pipeline.m  OpenSim_WriteMotion.m  SIMM_ReadMotion.m  XML_FindTagNames.m  XML_ListNodeNames.m  determineLigMoment.m  importFrames.m  load_mvnx.m  mvarray.m  read_events_Nexus.m  read_trcFile.m  search_c3d.m  write_motionFile.m  xml_read.m  xml_write.m
SubFunctions/CPP_Projects/DataAdapter/: CMakeLists.txt  StoAdapter.cpp
SubFunctions/CPP_Projects/IMU_GenSto/: CMakeLists.txt  Sto_IMU.cpp
SubFunctions/CPP_Projects/MexFiles/: Create_IMU_Storage.cpp  Create_IMU_Storage.mexw64  compile_mex.m  test.sto
SubFunctions/OpenIMUs-main/: import_sto_MNV_to_Tables_v1.m
SubFunctions/OpenIMUs-main/Data_Structure/: Data_Struct_Save_Load_S01_v1.m  Data_Struct_Save_Load_S01_v2.m  OpenIMUs_CreateSensStruct_MVN_v3.m
SubFunctions/OpenIMUs-main/OpenIMUs_FC/: OpenIMUs_AngAlign_v3.m  (+5 more)
(+36 files in other folders)
